# kalshi-research

./: main.py  pyproject.toml
config/: settings.py
core/: client.py
tests/: test_client.py
